# map_preprocessor

./: CMakeLists.txt  package.xml
launch/: autoencoder.launch  frontier_waypoint.launch  map_preprocessor.rviz  map_writer.launch  move_base.launch  slam.launch  stage_sim.launch
msg/: LocalMap.msg  MapEncoding.msg
scripts/: autoencoder_params.yaml  base_local_planner_params.yaml  frontier_costmap_params.yaml  frontier_waypoint_params.yaml  local_costmap_params.yaml  map_writer_params.yaml  run-multi-robot-map-encoder
src/: LocalMapState.h  MapWriter.h  local_map_state.cpp  map_encode.py  map_writer.cpp  planner_recover.cpp  planner_recover.h  test_autoencoder.py
src/models/: __init__.py  cnn_auto_encoder_relu.py  cnn_auto_encoder_selu.py
src/models/trained_models/: map_ae_256x256_selu_20_L1_params.npy
src/utils/: map_dataset.py
worlds/: freiburg.pgm  freiburg.world  freiburg_original.pgm  intel.pgm  intel.world  map3.world  map4.world  willow.world
